Thu Dec 24 16:17:47 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (fake.rb): $(arch)-fake.rb must depend miniruby because
	  it may depend miniruby.

Thu Dec 24 16:13:05 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (ripper.c): r50045 wrongly replace $(PWD) with ../..
	  It is the top of build directory, not topsrcdir.

Thu Dec 24 15:02:42 2015  sorah (Shota Fukumori)  <her@sorah.jp>

	* tool/vcs.rb (IO.popen): Refactor. Avoid assigning in condition.

Thu Dec 24 15:01:38 2015  sorah (Shota Fukumori)  <her@sorah.jp>

	* tool/file2lastrev.rb: Fix ArgumentError to work on Ruby 1.8.7.

Thu Dec 24 14:44:08 2015  sorah (Shota Fukumori)  <her@sorah.jp>

	* tool/vcs.rb (IO.popen): Enable on Ruby 1.9 where chdir option is not
	  supported on IO.popen

	* tool/vcs.rb (IO.popen): Fix NoMethodError. I guess r49705 was not
	  tested... :/

Thu Dec 24 14:57:03 2015  Koichi Sasada  <ko1@atdot.net>

	* NEWS: rename
	  "Implementation changes" section to
	  "Supported platform changes" section.

	* NEWS: add "Implementation improvements" and add several entries.

	* NEWS: add NEWS entries by Eric Wong. [ruby-core:72450]

Thu Dec 24 00:26:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/extconf.rb: fix gem build failure on Windows.
	  only win32_vk.inc is included in the gem and no dependencies for
	  the header, so that gperf will not be mandatory.
	  [ruby-core:72453] [Bug #11866]

	* ext/io/console/io-console.gemspec: include depend file and
	  win32_vk header.

Wed Dec 23 23:58:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_readwrite_syserr_fail): works with the given errno than
	  thread local errno.

Wed Dec 23 17:57:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c, io.c, util.c: prefer rb_syserr_fail with saved errno
	  over setting errno then call rb_sys_fail, not to be clobbered
	  potentially and to reduce thread local errno accesses.

Wed Dec 23 11:58:52 2015  Yuichiro Kaneko  <yui-knk@ruby-lang.org>
