@@ -295,10 +295,10 @@ r_value(VALUE value)
   (((INSN*)(insn))->insn_id)
 
 /* error */
-typedef void (*compile_error_func)(const char *, int, const char *, ...);
+typedef void (*compile_error_func)(VALUE, int, const char *, ...);
 
 static void
-append_compile_error(const char *file, int line, const char *fmt, ...)
+append_compile_error(VALUE file, int line, const char *fmt, ...)
 {
     VALUE err_info = rb_errinfo();
     VALUE str = rb_attr_get(err_info, idMesg);
@@ -306,7 +306,7 @@ append_compile_error(const char *file, int line, const char *fmt, ...)
 
     if (RSTRING_LEN(str)) rb_str_cat2(str, "\n");
     if (file) {
-	rb_str_cat2(str, file);
+	rb_str_concat(str, file);
 	if (line) rb_str_catf(str, ":%d", line);
 	rb_str_cat2(str, ": ");
     }
@@ -321,7 +321,7 @@ static compile_error_func
 prepare_compile_error(rb_iseq_t *iseq)
 {
     VALUE err_info = ISEQ_COMPILE_DATA(iseq)->err_info;
-    if (compile_debug) return rb_compile_bug;
+    if (compile_debug) return rb_compile_bug_str;
     if (NIL_P(err_info)) {
 	err_info = rb_exc_new_cstr(rb_eSyntaxError, "");
 	RB_OBJ_WRITE(iseq, &ISEQ_COMPILE_DATA(iseq)->err_info, err_info);
@@ -332,7 +332,7 @@ prepare_compile_error(rb_iseq_t *iseq)
 
 #define COMPILE_ERROR prepare_compile_error(iseq)
 
-#define ERROR_ARGS_AT(n) ruby_sourcefile, nd_line(n),
+#define ERROR_ARGS_AT(n) ruby_sourcefile_string, nd_line(n),
 #define ERROR_ARGS ERROR_ARGS_AT(node)
 
 #define EXPECT_NODE(prefix, node, ndtype) \
@@ -340,23 +340,23 @@ do { \
     NODE *error_node = (node); \
     enum node_type error_type = nd_type(error_node); \
     if (error_type != (ndtype)) { \
-	rb_compile_bug(ERROR_ARGS_AT(error_node) \
-		       prefix ": " #ndtype " is expected, but %s", \
-		       ruby_node_name(error_type)); \
+	rb_compile_bug_str(ERROR_ARGS_AT(error_node) \
+			   prefix ": " #ndtype " is expected, but %s", \
+			   ruby_node_name(error_type)); \
     } \
 } while (0)
 
 #define EXPECT_NODE_NONULL(prefix, parent, ndtype) \
 do { \
-    rb_compile_bug(ERROR_ARGS_AT(parent) \
-		   prefix ": must be " #ndtype ", but 0"); \
+    rb_compile_bug_str(ERROR_ARGS_AT(parent) \
+		       prefix ": must be " #ndtype ", but 0"); \
 } while (0)
 
 #define UNKNOWN_NODE(prefix, node) \
 do { \
     NODE *error_node = (node); \
-    rb_compile_bug(ERROR_ARGS_AT(error_node) prefix ": unknown node (%s)", \
-		   ruby_node_name(nd_type(error_node))); \
+    rb_compile_bug_str(ERROR_ARGS_AT(error_node) prefix ": unknown node (%s)", \
+		       ruby_node_name(nd_type(error_node))); \
 } while (0)
 
 #define COMPILE_OK 1
@@ -494,6 +494,7 @@ iseq_add_mark_object(const rb_iseq_t *iseq, VALUE v)
     return COMPILE_OK;
 }
 
+#define ruby_sourcefile_string (iseq->body->location.path)
 #define ruby_sourcefile		RSTRING_PTR(iseq->body->location.path)
 
 static int
@@ -512,7 +513,7 @@ validate_label(st_data_t name, st_data_t label, st_data_t arg)
     LABEL *lobj = (LABEL *)label;
     if (!lobj->link.next) {
 	do {
-	    COMPILE_ERROR(ruby_sourcefile, lobj->position,
+	    COMPILE_ERROR(ruby_sourcefile_string, lobj->position,
 			  "%"PRIsVALUE": undefined label",
 			  rb_id2str((ID)name));
 	} while (0);
@@ -611,7 +612,7 @@ rb_iseq_compile_node(rb_iseq_t *iseq, NODE *node)
 	    COMPILE(ret, "defined guard", node);
 	    break;
 	  default:
-	    rb_compile_bug(ERROR_ARGS "unknown scope");
+	    rb_compile_bug_str(ERROR_ARGS "unknown scope");
 	}
     }
 
@@ -1559,7 +1560,7 @@ iseq_set_sequence(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 	  default:
 	    dump_disasm_list(FIRST_ELEMENT(anchor));
 	    dump_disasm_list(list);
-	    COMPILE_ERROR(ruby_sourcefile, line, "error: set_sequence");
+	    COMPILE_ERROR(ruby_sourcefile_string, line, "error: set_sequence");
 	    return COMPILE_NG;
 	}
 	list = list->next;
@@ -1606,7 +1607,7 @@ iseq_set_sequence(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 		    dump_disasm_list(list);
 		    xfree(generated_iseq);
 		    xfree(line_info_table);
-		    COMPILE_ERROR(ruby_sourcefile, iobj->line_no,
+		    COMPILE_ERROR(ruby_sourcefile_string, iobj->line_no,
 				  "operand size miss! (%d for %d)",
 				  iobj->operand_size, len - 1);
 		    return COMPILE_NG;
@@ -1621,7 +1622,7 @@ iseq_set_sequence(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 			    /* label(destination position) */
 			    LABEL *lobj = (LABEL *)operands[j];
 			    if (!lobj->set) {
-				COMPILE_ERROR(ruby_sourcefile, iobj->line_no,
+				COMPILE_ERROR(ruby_sourcefile_string, iobj->line_no,
 					      "unknown label");
 				return COMPILE_NG;
 			    }
@@ -1716,7 +1717,7 @@ iseq_set_sequence(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 		      default:
 			xfree(generated_iseq);
 			xfree(line_info_table);
-			COMPILE_ERROR(ruby_sourcefile, iobj->line_no,
+			COMPILE_ERROR(ruby_sourcefile_string, iobj->line_no,
 				      "unknown operand type: %c", type);
 			return COMPILE_NG;
 		    }
@@ -1773,8 +1774,8 @@ iseq_set_sequence(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 			generated_iseq[code_index++] = BIN(nop);
 		    }
 		    else {
-			rb_compile_bug(ruby_sourcefile, adjust->line_no,
-				       "iseq_set_sequence: adjust bug %d < %d", orig_sp, sp);
+			rb_compile_bug_str(ruby_sourcefile_string, adjust->line_no,
+					   "iseq_set_sequence: adjust bug %d < %d", orig_sp, sp);
 		    }
 		}
 		break;
@@ -2454,7 +2455,7 @@ insn_set_sc_state(rb_iseq_t *iseq, INSN *iobj, int state)
 		dump_disasm_list((LINK_ELEMENT *)iobj);
 		dump_disasm_list((LINK_ELEMENT *)lobj);
 		printf("\n-- %d, %d\n", lobj->sc_state, nstate);
-		COMPILE_ERROR(ruby_sourcefile, iobj->line_no,
+		COMPILE_ERROR(ruby_sourcefile_string, iobj->line_no,
 			      "insn_set_sc_state error\n");
 		return COMPILE_NG;
 	    }
@@ -2556,7 +2557,7 @@ iseq_set_sequence_stackcaching(rb_iseq_t *iseq, LINK_ANCHOR *anchor)
 			  case SCS_XX:
 			    goto normal_insn;
 			  default:
-			    COMPILE_ERROR(ruby_sourcefile, iobj->line_no,
+			    COMPILE_ERROR(ruby_sourcefile_string, iobj->line_no,
 					  "unreachable");
 			    return COMPILE_NG;
 			}
@@ -2600,8 +2601,8 @@ compile_dstr_fragments(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE *node, int *cntp)
     if (!NIL_P(lit)) {
 	cnt++;
 	if (!RB_TYPE_P(lit, T_STRING)) {
-	    rb_compile_bug(ERROR_ARGS "dstr: must be string: %s",
-			   rb_builtin_type_name(TYPE(lit)));
+	    rb_compile_bug_str(ERROR_ARGS "dstr: must be string: %s",
+			       rb_builtin_type_name(TYPE(lit)));
 	}
 	lit = node->nd_lit = rb_fstring(lit);
 	ADD_INSN1(ret, nd_line(node), putobject, lit);
@@ -2947,7 +2948,8 @@ when_vals(rb_iseq_t *iseq, LINK_ANCHOR *cond_seq, NODE *vals, LABEL *l1, int onl
 	}
 	else {
 	    if (rb_hash_lookup(literals, lit) != Qnil) {
-		rb_compile_warning(ruby_sourcefile, nd_line(val), "duplicated when clause is ignored");
+		rb_compile_warning(ruby_sourcefile, nd_line(val),
+				   "duplicated when clause is ignored");
 	    }
 	    else {
 		rb_hash_aset(literals, lit, (VALUE)(l1) | 1);
@@ -3823,7 +3825,7 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 
 	    vals = node->nd_head;
 	    if (!vals) {
-		rb_compile_bug(ERROR_ARGS "NODE_WHEN: must be NODE_ARRAY, but 0");
+		rb_compile_bug_str(ERROR_ARGS "NODE_WHEN: must be NODE_ARRAY, but 0");
 	    }
 	    switch (nd_type(vals)) {
 	      case NODE_ARRAY:
@@ -3917,7 +3919,7 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 
 	if (node->nd_state == Qundef) {
 	    /* ADD_INSN(ret, line, putundef); */
-	    rb_compile_bug(ERROR_ARGS "unsupported: putundef");
+	    rb_compile_bug_str(ERROR_ARGS "unsupported: putundef");
 	}
 	else {
 	    ADD_INSN(ret, line, putnil);
@@ -4391,7 +4393,7 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 	idx = get_dyna_var_idx(iseq, node->nd_vid, &lv, &ls);
 
 	if (idx < 0) {
-	    rb_compile_bug(ERROR_ARGS "NODE_DASGN(_CURR): unknown id (%"PRIsVALUE")", rb_id2str(node->nd_vid));
+	    rb_compile_bug_str(ERROR_ARGS "NODE_DASGN(_CURR): unknown id (%"PRIsVALUE")", rb_id2str(node->nd_vid));
 	}
 
 	ADD_INSN2(ret, line, setlocal, INT2FIX(ls - idx), INT2FIX(lv));
@@ -5115,8 +5117,8 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 	    break;
 
 	  default:
-	    rb_compile_bug(ERROR_ARGS_AT(node->nd_head) "can't make hash with this node: %s",
-			   ruby_node_name(type));
+	    rb_compile_bug_str(ERROR_ARGS_AT(node->nd_head) "can't make hash with this node: %s",
+			       ruby_node_name(type));
 	}
 
 	if (poped) {
@@ -5206,7 +5208,7 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 	if (!poped) {
 	    idx = get_dyna_var_idx(iseq, node->nd_vid, &lv, &ls);
 	    if (idx < 0) {
-		rb_compile_bug(ERROR_ARGS "unknown dvar (%"PRIsVALUE")", rb_id2str(node->nd_vid));
+		rb_compile_bug_str(ERROR_ARGS "unknown dvar (%"PRIsVALUE")", rb_id2str(node->nd_vid));
 	    }
 	    ADD_INSN2(ret, line, getlocal, INT2FIX(ls - idx), INT2FIX(lv));
 	}
@@ -5800,13 +5802,13 @@ iseq_compile_each(rb_iseq_t *iseq, LINK_ANCHOR *ret, NODE * node, int poped)
 
 	    if (default_value == (NODE *)-1) {
 		/* required argument. do nothing */
-		rb_compile_bug(ERROR_ARGS "unreachable");
+		rb_compile_bug_str(ERROR_ARGS "unreachable");
 	    }
 	    else if (nd_type(default_value) == NODE_LIT ||
 		     nd_type(default_value) == NODE_NIL ||
 		     nd_type(default_value) == NODE_TRUE ||
 		     nd_type(default_value) == NODE_FALSE) {
-		rb_compile_bug(ERROR_ARGS "unreachable");
+		rb_compile_bug_str(ERROR_ARGS "unreachable");
 	    }
 	    else {
 		/* if keywordcheck(_kw_bits, nth_keyword)
@@ -6347,14 +6349,14 @@ iseq_build_from_ary_body(rb_iseq_t *iseq, LINK_ANCHOR *anchor,
 	    insn = (argc < 0) ? Qnil : RARRAY_AREF(obj, 0);
 	    if (st_lookup(insn_table, (st_data_t)insn, &insn_id) == 0) {
 		/* TODO: exception */
-		COMPILE_ERROR(ruby_sourcefile, line_no,
+		COMPILE_ERROR(ruby_sourcefile_string, line_no,
 			      "unknown instruction: %+"PRIsVALUE, insn);
 		ret = COMPILE_NG;
 		break;
 	    }
 
 	    if (argc != insn_len((VALUE)insn_id)-1) {
-		COMPILE_ERROR(ruby_sourcefile, line_no,
+		COMPILE_ERROR(ruby_sourcefile_string, line_no,
 			      "operand size mismatch");
 		ret = COMPILE_NG;
 		break;
